Added final React app architecture diagram

--- a/slides/index.html
+++ b/slides/index.html
@@ -496,11 +496,10 @@ readDb.then(onSuccess, onFailure);
             * `twitterSearchApi` -- RESTful API that will run Twitter searches
           </section>
 
-          <!-- TODO: create Twitter Searcher app architecture diagram -->
           <section data-markdown>
-            ### Architecture
+            ## Architecture
 
-            ![twitter_search_architecture](images/twitter_search_architecture.png)
+            ![twitter_search_architecture](images/twitter_search_architecture.svg)
           </section>
 
           <section data-markdown>
