--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Web Stack Training</title>
+    <title>Building Isomorphic Web Applications using React</title>
 
-    <meta name="description" content="Web Stack Training">
+    <meta name="description" content="Building Isomorphic Web Applications using React">
     <meta name="author" content="Donald Whyte">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -41,8 +41,8 @@
 
         <section>
           <section>
-            <h1>Isomorphic React App Workshop</h1>
-            <h3>Building isomorphic web apps using React and Node</h3>
+            <h1>Building Isomorphic Web Applications</h1>
+            <h3>Using React and Node</h3>
 
             <p>
                 Created by <a href="http://donaldwhyte.co.uk">Donald Whyte</a>
