Added meta tag for LinkedIn

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
+    <meta property="og:image" content="http://donaldwhyte.github.io/isomorphic-react-workshop/images/twitter_search_architecture.svg" />
+
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/white.css" id="theme">
     <link rel="stylesheet" href="css/custom.css">
