Added more complete metadata for LinkedIn

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-    <meta property="og:image" content="http://donaldwhyte.github.io/isomorphic-react-workshop/images/twitter_search_architecture.svg" />
+    <meta property="og:title" content="Building Isomorphic Web Applications using React" />
+    <meta property="og:description" content="Talk on how to build isomorphic web apps in React, with code complete example React app." />
+    <meta property="og:url" content="http://donaldwhyte.github.io/isomorphic-react-workshop" />
+    <meta property="og:image" content="http://donaldwhyte.github.io/isomorphic-react-workshop/images/virtual_dom_diff.png" />
 
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/white.css" id="theme">
